--- a/trunk/PriceMonitor/MonitorEditViewController.xib
+++ b/trunk/PriceMonitor/MonitorEditViewController.xib
@@ -87,6 +87,7 @@
 						<reference key="IBUIHighlightedColor" ref="97684420"/>
 						<int key="IBUIBaselineAdjustment">1</int>
 						<float key="IBUIMinimumFontSize">10</float>
+						<int key="IBUITextAlignment">1</int>
 					</object>
 					<object class="IBUITextField" id="599458494">
 						<reference key="NSNextResponder" ref="191373211"/>
